src/test/fail/list_assign_wrong_class.ly
<@lily
    function fval(integer a => integer) { return 10 }
    list[function( => integer)] lst = [fval] @>
